feat(topbar) finish topbar

--- a/src/app/home/pages/home-page/home-page.component.html
+++ b/src/app/home/pages/home-page/home-page.component.html
@@ -1,20 +1,6 @@
-<header>
-  <p-megaMenu [model]="items" [style]="{ 'border-radius': '3rem', display: 'flex', flexWrap: 'wrap' }" styleClass="p-3 surface-0">
-    <ng-template pTemplate="end">
-      <div class="home-page-links">
-        <a routerLink="/" class="p-button font-bold">
-          Iniciar Sesión
-        </a>
-        <a routerLink="/" class="p-button font-bold">
-          Registrarse
-        </a>
-      </div>
-    </ng-template>
-  </p-megaMenu>
-</header>
 <main>
   <section class="principal-section flex flex-column justify-content-center align-items-center">
-    <h1 class="mt-8 text-5xl text-center w-8">Optimiza tu salud con el cálculo preciso de macronutrientes e insulina</h1>
+    <h1 class="text-5xl text-center w-8">Optimiza tu salud con el cálculo preciso de macronutrientes e insulina</h1>
     <p class="text-l text-center w-8 text-700">Nuestro sistema avanzado te ayuda a calcular la cantidad exacta de insulina y macronutrientes que necesitas para controlar tu diabetes de manera efectiva, mejorando tu bienestar diario y optimizando tus niveles de azúcar en sangre.</p>
     <div class="mt-8 flex flex-wrap justify-content-center gap-8 font-light">
       <a routerLink="/" class="p-button no-underline font-light px-8 py-3 text-blue-50">
