--- a/src/app/login/pages/login-page/login-page.component.html
+++ b/src/app/login/pages/login-page/login-page.component.html
@@ -1,9 +1,9 @@
-<div class="flex max-h-screen">
+<main class="flex max-h-screen">
     <div class="flex flex-1 justify-content-center align-items-center p-7 max-h-full w-6">
         <div class="w-6">
             <img src="login/login-image.jpg" alt="" class="decorator-img w-full h-full border-round-2xl">
         </div>
-        
+
     </div>
     <div class="flex flex-column flex-1 justify-content-center align-items-start p-5">
         <div class="field-container lg:w-6">
@@ -11,19 +11,19 @@
                 <h2 class="font-light mr-3  lg:text-4xl md:text-2xl">Bienvenido de nuevo</h2> <i class="pi pi-check" style="font-size: 1.5rem"></i>
             </div>
             <div class="field ">
-                <i class="mr-3 pi pi-user" style="font-size: 1.5rem"></i><label for="usuario">Usuario</label> 
-                <input type="text" class=" text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
-                
+                <i class="mr-3 pi pi-user" style="font-size: 1.5rem"></i><label for="username">Usuario</label>
+                <input id="username" type="text" class=" text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
+
             </div>
             <div class="field">
                 <i class="mr-3 pi pi-lock" style="font-size: 1.5rem"></i><label for="password">Contraseña</label>
-                <input type="password" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
+                <input id="password" type="password" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
             </div>
             <p-button label="Login" [rounded]="true" />
             <div class="field text-right">
                 <p>¿Aún no tienes cuenta?<p-button [style]="{'padding': 0, 'margin-left': '5px'}" label="Regístrate" [link]="true" routerLink="/register"/></p>
             </div>
         </div>
-        
+
     </div>
-</div>
+</main>
