feat(Home) Merge

--- a/src/app/home/pages/home-page/home-page.component.html
+++ b/src/app/home/pages/home-page/home-page.component.html
@@ -7,7 +7,7 @@
         Calcular macronutrientes
       </a>
       <a routerLink="/" class="p-button no-underline font-light px-8 py-3 text-blue-50">
-        Calcular insulina
+        Calcular insulinaa
       </a>
     </div>
 
