--- a/src/app/register/pages/register-page/register-page.component.html
+++ b/src/app/register/pages/register-page/register-page.component.html
@@ -1,1 +1,42 @@
-<p>register-page works!</p>
+<main class="flex max-h-screen">
+  <div class="flex flex-1 justify-content-center align-items-center p-7 max-h-full w-6">
+    <div class="w-6">
+      <img src="login/login-image.jpg" alt="" class="decorator-img w-full h-full border-round-2xl">
+    </div>
+
+  </div>
+  <div class="flex flex-column flex-1 p-5">
+<!--    <div class="flex mb-5 gap-2 justify-content-end">-->
+<!--      <p-button-->
+<!--        (onClick)="active = 0"-->
+<!--        [rounded]="true"-->
+<!--        label="1"-->
+<!--        styleClass="w-2rem h-2rem p-0"-->
+<!--        [outlined]="active !== 0" />-->
+<!--      <p-button-->
+<!--        (onClick)="active = 1"-->
+<!--        [rounded]="true"-->
+<!--        label="2"-->
+<!--        styleClass="w-2rem h-2rem p-0"-->
+<!--        [outlined]="active !== 1" />-->
+<!--      <p-button-->
+<!--        (onClick)="active = 2"-->
+<!--        [rounded]="true"-->
+<!--        label="3"-->
+<!--        styleClass="w-2rem h-2rem p-0"-->
+<!--        [outlined]="active !== 2" />-->
+<!--    </div>-->
+    <div class="card">
+      <p-toast />
+      <p-steps
+        [model]="items"
+        [readonly]="false"
+        [activeIndex]="activeIndex"
+        (activeIndexChange)="onActiveIndexChange($event)" />
+    </div>
+    <router-outlet></router-outlet>
+
+
+  </div>
+</main>
+
