feat(Footer) Create footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- NavBar -->
 <shared-top-bar></shared-top-bar>
 <router-outlet></router-outlet>
-
+<shared-footer></shared-footer>
 <!-- footer -->
