--- a/src/app/login/pages/login-page/login-page.component.html
+++ b/src/app/login/pages/login-page/login-page.component.html
@@ -5,24 +5,32 @@
         </div>
 
     </div>
-    <div class="flex flex-column flex-1 justify-content-center align-items-start p-5">
+    <div class="flex flex-column flex-1 justify-content-center align-items-start p-2">
         <div class="field-container lg:w-6">
             <div class="field flex align-items-center">
-                <h2 class="font-light mr-3  lg:text-4xl md:text-2xl">Bienvenido de nuevo</h2> <i class="pi pi-check" style="font-size: 1.5rem"></i>
+                <h2 class="font-light mr-3">Bienvenido de nuevo</h2> <i class="pi pi-check" style="font-size: 1.5rem"></i>
             </div>
+          <form>
             <div class="field ">
+              <div class="mb-3">
                 <i class="mr-3 pi pi-user" style="font-size: 1.5rem"></i><label for="username">Usuario</label>
-                <input id="username" type="text" class=" text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
+
+              </div>
+              <input pInputText id="username" type="text" class=" text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
 
             </div>
             <div class="field">
+              <div class="mb-3">
                 <i class="mr-3 pi pi-lock" style="font-size: 1.5rem"></i><label for="password">Contraseña</label>
-                <input id="password" type="password" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
+              </div>
+              <p-password id="password" [toggleMask]="true" class="w-full"/>
             </div>
             <p-button label="Login" [rounded]="true" />
-            <div class="field text-right">
-                <p>¿Aún no tienes cuenta?<p-button [style]="{'padding': 0, 'margin-left': '5px'}" label="Regístrate" [link]="true" routerLink="/register"/></p>
+            <div class="field text-right flex align-content-between">
+              <p class="flex justify-content-end align-items-center">¿Aún no tienes cuenta?<p-button [style]="{'padding': 0, 'margin-left': '5px', 'display': 'flex', 'align-items': 'center'}" label="Regístrate" [link]="true" routerLink="/register"/></p>
             </div>
+          </form>
+
         </div>
 
     </div>
