--- a/src/app/register/pages/register-page/register-page.component.html
+++ b/src/app/register/pages/register-page/register-page.component.html
@@ -5,37 +5,12 @@
     </div>
 
   </div>
-  <div class="flex flex-column flex-1 p-5">
-<!--    <div class="flex mb-5 gap-2 justify-content-end">-->
-<!--      <p-button-->
-<!--        (onClick)="active = 0"-->
-<!--        [rounded]="true"-->
-<!--        label="1"-->
-<!--        styleClass="w-2rem h-2rem p-0"-->
-<!--        [outlined]="active !== 0" />-->
-<!--      <p-button-->
-<!--        (onClick)="active = 1"-->
-<!--        [rounded]="true"-->
-<!--        label="2"-->
-<!--        styleClass="w-2rem h-2rem p-0"-->
-<!--        [outlined]="active !== 1" />-->
-<!--      <p-button-->
-<!--        (onClick)="active = 2"-->
-<!--        [rounded]="true"-->
-<!--        label="3"-->
-<!--        styleClass="w-2rem h-2rem p-0"-->
-<!--        [outlined]="active !== 2" />-->
-<!--    </div>-->
-    <div class="card">
+  <div class="flex flex-column flex-1 p-2 justify-content-center">
+    <div class="card xl:w-6 lg:w-full md:w-full sm:w-full">
       <p-toast />
-      <p-steps
-        [model]="items"
-        [readonly]="false"
-        [activeIndex]="activeIndex"
-        (activeIndexChange)="onActiveIndexChange($event)" />
+      <p-steps [model]="items" [readonly]="false"/>
+      <router-outlet></router-outlet>
     </div>
-    <router-outlet></router-outlet>
-
 
   </div>
 </main>
