feat(register): Add user-form component

--- a/src/app/login/pages/login-page/login-page.component.html
+++ b/src/app/login/pages/login-page/login-page.component.html
@@ -5,7 +5,7 @@
         </div>
 
     </div>
-    <div class="flex flex-column flex-1 justify-content-center align-items-start p-2">
+    <div class="flex flex-column flex-1 justify-content-center align-items-start">
         <div class="field-container lg:w-6">
             <div class="field flex align-items-center">
                 <h2 class="font-light mr-3">Bienvenido de nuevo</h2> <i class="pi pi-check" style="font-size: 1.5rem"></i>
