--- a/src/app/register/pages/register-page/register-page.component.html
+++ b/src/app/register/pages/register-page/register-page.component.html
@@ -5,7 +5,7 @@
     </div>
 
   </div>
-  <div class="flex flex-column flex-1 p-2 justify-content-center">
+  <div class="flex flex-column flex-1 justify-content-center">
     <div class="card xl:w-6 lg:w-full md:w-full sm:w-full">
       <p-toast />
       <p-steps [model]="items" [readonly]="false"/>
