add reactive forms to register pages

--- a/src/app/home/components/informative-section/informative-section.component.html
+++ b/src/app/home/components/informative-section/informative-section.component.html
@@ -2,7 +2,7 @@
   <div class="container flex flex-wrap">
     <div
       class="content flex-1 p-2 flex justify-content-center flex-column sm:flex-order-0"
-      [ngClass]="{'flex-order-1': data.reverse}"
+      [ngClass]="{'lg:flex-order-1': data.reverse}"
     >
       <h2>{{ data.title }}</h2>
       <p class="text-xs">{{ data.description }}</p>
