--- a/src/app/login/pages/login-page/login-page.component.html
+++ b/src/app/login/pages/login-page/login-page.component.html
@@ -10,22 +10,23 @@
             <div class="field flex align-items-center">
                 <h2 class="font-light mr-3">Bienvenido de nuevo</h2> <i class="pi pi-check" style="font-size: 1.5rem"></i>
             </div>
-          <form>
+          <p-toast/>
+          <form [formGroup]="loginUserForm" (submit)="logUser()">
             <div class="field ">
               <div class="mb-3">
                 <i class="mr-3 pi pi-user" style="font-size: 1.5rem"></i><label for="username">Usuario</label>
 
               </div>
-              <input pInputText id="username" type="text" class=" text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
+              <input formControlName="username" pInputText id="username" type="text" class=" text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
 
             </div>
             <div class="field">
               <div class="mb-3">
                 <i class="mr-3 pi pi-lock" style="font-size: 1.5rem"></i><label for="password">Contraseña</label>
               </div>
-              <p-password id="password" [toggleMask]="true" [feedback]="false" class="w-full"/>
+              <p-password formControlName="password" id="password" [toggleMask]="true" [feedback]="false" class="w-full"/>
             </div>
-            <p-button label="Login" [rounded]="true" />
+            <p-button type="submit" label="Login" [rounded]="true" />
             <div class="field text-right flex align-content-between">
               <p class="flex justify-content-end align-items-center">¿Aún no tienes cuenta?<p-button [style]="{'padding': 0, 'margin-left': '5px', 'display': 'flex', 'align-items': 'center'}" label="Regístrate" [link]="true" routerLink="/register"/></p>
             </div>
