--- a/src/app/register/pages/register-page/register-page.component.html
+++ b/src/app/register/pages/register-page/register-page.component.html
@@ -6,7 +6,7 @@
 
   </div>
   <div class="flex flex-column flex-1 justify-content-center">
-    <div class="card xl:w-6 lg:w-full md:w-full sm:w-full">
+    <div class="card">
       <p-toast />
       <p-steps [model]="items" [readonly]="true"/>
       <router-outlet></router-outlet>
