--- a/src/app/shared/top-bar/top-bar.component.css
+++ b/src/app/shared/top-bar/top-bar.component.css
@@ -26,3 +26,22 @@ span{
   display:inline-block;
   height:100%;
 }
+
+.image-container {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap:10px;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
