--- a/src/app/shared/top-bar/top-bar.component.html
+++ b/src/app/shared/top-bar/top-bar.component.html
@@ -8,7 +8,7 @@
 
       </span>
     </ng-template>
-    <ng-template pTemplate="end">
+    <ng-template pTemplate="end" *ngIf="!getLoginStatus(); else logoutTemplate">
 
       <div class="home-page-links flex align-items-center text-black-alpha-90">
 
@@ -17,6 +17,19 @@
           <i class="pi pi-user mr-2 cursor-pointer" style="font-size: 1.5rem"></i>
           <span class="font-bold">INICIAR SESION</span>
         </a>
+      </div>
+    </ng-template>
+    <ng-template pTemplate="end" #logoutTemplate>
+
+      <div class="home-page-links flex align-items-center text-black-alpha-90">
+        <i class="pi pi-moon mr-3 cursor-pointer" style="font-size: 1.5rem"></i>
+          <div class="no-underline text-black-alpha-90 flex align-items-center gap-2">
+            <div class="image-container">
+              <img src="home/memoji.jpg" alt="Imagen" />
+            </div>
+            <p-button (click)="logout()" styleClass="p-button-outlined p-button-rounded p-button-info p-button-text p-0" label="CERRAR SESION" ></p-button>
+          </div>
+
       </div>
     </ng-template>
   </p-megaMenu>
