--- a/src/app/shared/top-bar/top-bar.component.html
+++ b/src/app/shared/top-bar/top-bar.component.html
@@ -1,37 +1,35 @@
-<header class=" top-bar">
+<header class="  top-bar flex align-items-center justify-content-between ">
   <p-megaMenu [model]="items" [style]="{ 'font-family': 'Poppins', 'border-radius': '3rem', display: 'flex', flexWrap: 'wrap'}" styleClass="p-3 surface-0">
-    <ng-template pTemplate="start" class="flex-order-1">
-      <span>
+
+  </p-megaMenu>
+  <span class="flex-1 flex justify-content-center">
         <a routerLink="home">
           <img src="top-bar/logo-test.png" alt="">
         </a>
 
-      </span>
-    </ng-template>
-    <ng-template pTemplate="end" *ngIf="!getLoginStatus(); else logoutTemplate">
+  </span>
+  <div class="flex-1 flex justify-content-end pr-5">
+    <div *ngIf="!userLogged">
 
       <div class="home-page-links flex align-items-center text-black-alpha-90">
 
         <i class="pi pi-moon mr-3 cursor-pointer" style="font-size: 1.5rem"></i>
-        <a routerLink="login" class="no-underline text-black-alpha-90 flex align-items-center">
-          <i class="pi pi-user mr-2 cursor-pointer" style="font-size: 1.5rem"></i>
-          <span class="font-bold">INICIAR SESION</span>
-        </a>
+        <i class="pi pi-user mr-2" style="font-size: 1.5rem"></i>
+        <p-button routerLink="/login" styleClass=" p-button-outlined p-button-rounded p-button-secondary p-button-text p-0" label="INICIAR SESION" ></p-button>
       </div>
-    </ng-template>
-    <ng-template pTemplate="end" #logoutTemplate>
+    </div>
+    <div *ngIf="userLogged">
 
       <div class="home-page-links flex align-items-center text-black-alpha-90">
         <i class="pi pi-moon mr-3 cursor-pointer" style="font-size: 1.5rem"></i>
-          <div class="no-underline text-black-alpha-90 flex align-items-center gap-2">
-            <div class="image-container">
-              <img src="home/memoji.jpg" alt="Imagen" />
-            </div>
-            <p-button (click)="logout()" styleClass="p-button-outlined p-button-rounded p-button-info p-button-text p-0" label="CERRAR SESION" ></p-button>
-          </div>
+        <div class="no-underline text-black-alpha-90 flex align-items-center gap-2">
+          <p-avatar image="home/memoji.jpg" shape="circle" size="xlarge"></p-avatar>
+          <p-button (click)="logout()" styleClass=" p-button-outlined p-button-rounded p-button-secondary p-button-text p-0" label="CERRAR SESION" ></p-button>
+        </div>
 
       </div>
-    </ng-template>
-  </p-megaMenu>
+    </div>
+  </div>
+
 
 </header>
