--- a/src/app/home/components/informative-section/informative-section.component.html
+++ b/src/app/home/components/informative-section/informative-section.component.html
@@ -5,8 +5,8 @@
       [ngClass]="{'lg:flex-order-1': data.reverse}"
     >
       <h2>{{ data.title }}</h2>
-      <p class="text-xs">{{ data.description }}</p>
-      <ul class="text-xs">
+      <p>{{ data.description }}</p>
+      <ul>
         <li *ngFor="let benefit of data.benefits">{{ benefit }}</li>
       </ul>
     </div>
