--- a/src/app/shared/top-bar/top-bar.component.html
+++ b/src/app/shared/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
-<header class="  top-bar flex align-items-center justify-content-between ">
-  <p-megaMenu [model]="items" [style]="{ 'font-family': 'Poppins', 'border-radius': '3rem', display: 'flex', flexWrap: 'wrap'}" styleClass="p-3 surface-0">
+<header class="top-bar flex align-items-center justify-content-between  ">
+  <p-megaMenu [model]="items" [style]="{ 'font-family': 'Poppins', 'border-radius': '3rem'}" styleClass="p-3 surface-0">
 
   </p-megaMenu>
   <span class="flex-1 flex justify-content-center">
@@ -15,7 +15,7 @@
 
         <i class="pi pi-moon mr-3 cursor-pointer" style="font-size: 1.5rem"></i>
         <i class="pi pi-user mr-2" style="font-size: 1.5rem"></i>
-        <p-button routerLink="/login" styleClass=" p-button-outlined p-button-rounded p-button-secondary p-button-text p-0" label="INICIAR SESION" ></p-button>
+        <p-button routerLink="/login" styleClass=" p-button-outlined p-button-rounded p-button-secondary p-button-text p-2" label="INICIAR SESION" ></p-button>
       </div>
     </div>
     <div *ngIf="userLogged">
