--- a/src/app/shared/top-bar/top-bar.component.css
+++ b/src/app/shared/top-bar/top-bar.component.css
@@ -8,7 +8,7 @@
   border:solid lightgrey 1px;
   background-color: white;
   padding: 0 20px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .p-avatar img {
@@ -25,7 +25,7 @@ p-megamenu{
   box-shadow: none;
 }
 
-span{
+.labelColor{
   color:black;
 }
 
