--- a/src/app/shared/top-bar/top-bar.component.html
+++ b/src/app/shared/top-bar/top-bar.component.html
@@ -15,7 +15,7 @@
 
         <i class="pi pi-moon mr-3 cursor-pointer" style="font-size: 1.5rem"></i>
         <i class="pi pi-user mr-2" style="font-size: 1.5rem"></i>
-        <p-button routerLink="/login" styleClass=" p-button-outlined p-button-rounded p-button-secondary p-button-text p-2" label="INICIAR SESION" ></p-button>
+        <p-button routerLink="/login" styleClass="labelColor p-button-outlined p-button-rounded p-button-secondary p-button-text p-2" label="INICIAR SESION" ></p-button>
       </div>
     </div>
     <div *ngIf="userLogged">
@@ -24,7 +24,7 @@
         <i class="pi pi-moon mr-3 cursor-pointer" style="font-size: 1.5rem"></i>
         <div class="no-underline text-black-alpha-90 flex align-items-center gap-2">
           <p-avatar image="home/memoji.jpg" shape="circle" size="xlarge"></p-avatar>
-          <p-button (click)="logout()" styleClass=" p-button-outlined p-button-rounded p-button-secondary p-button-text p-0" label="CERRAR SESION" ></p-button>
+          <p-button (click)="logout()" styleClass="labelColor p-button-outlined p-button-rounded p-button-secondary p-button-text p-0" label="CERRAR SESION" ></p-button>
         </div>
 
       </div>
