--- a/src/app/calories/components/progress-bar/progress-bar.component.html
+++ b/src/app/calories/components/progress-bar/progress-bar.component.html
@@ -1,5 +1,5 @@
 
-<p-progressBar [value]="50">
+<p-progressBar [value]="value" [color] = color >
   <ng-template pTemplate="content" let-value>
     <span>{{value}}/100</span>
   </ng-template>
