--- a/src/app/calories/components/search-food/search-food.component.html
+++ b/src/app/calories/components/search-food/search-food.component.html
@@ -20,41 +20,59 @@
 
     </div>
     <div class="flex gap-8">
-      <p-table [value]="foods" *ngIf="foods.length > 0" class="">
+      <p-table [value]="foods" *ngIf="foods.length > 0">
         <ng-template pTemplate="header">
           <tr>
             <th>Alimentos</th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-food>
+          <tr class="tr-space">
+            <td class=" bg-blue-100 border-round">
+              <form [formGroup]="foodForm" (submit)="addFoodToMeal(selectedMeal.name,food, foodForm)" class="flex align-items-center justify-content-center gap-2">
+                <label>{{food}}</label>
+                <p-inputNumber formControlName="quantity"/>
+                <p-selectButton
+                  formControlName="units"
+                  [options]="selectUnitOptions"
+                  optionLabel="label"
+                  optionValue="value"
+                  class="mr-1 w-5"
+                />
+                <p-button type="submit" icon="pi pi-plus"></p-button>
+              </form>
+            </td>
+          </tr>
           <tr>
-            <td class="flex align-items-center justify-content-center gap-2">
-              {{ food }}
-              <p-inputNumber #quantity/>
-              <p-selectButton
-                [options]="selectUnitOptions"
-                [(ngModel)]="unitValue"
-                optionLabel="label"
-                optionValue="value"
-                class="mr-1 w-5"
-              />
-              <p-button (click)="addFoodToMeal(food, quantity.value, unitValue)" icon="pi pi-plus"></p-button>
+            <td class="flex flex-nowrap gap-2 justify-content-around pb-4">
+              <div class="flex flex-column gap-2 flex-1">
+                <span class="text-center">Proteínas</span>
+                <calories-progress-bar class="w-full" [value]="80" [color]="proteinColor"></calories-progress-bar>
+              </div>
+              <div class="flex flex-column gap-2 flex-1">
+                <span class="text-center">Carbohidratos</span>
+                <calories-progress-bar class="w-full" [value]="70" [color]="carbsColor"></calories-progress-bar>
+              </div>
+              <div class="flex flex-column gap-2 flex-1" >
+                <span class="text-center">Grasas</span>
+                <calories-progress-bar class="w-full" [value]="60" [color]="fatColor"></calories-progress-bar>
+              </div>
             </td>
           </tr>
         </ng-template>
       </p-table>
-      <p-table [value]="foodsAdded" [ngClass]="foods.length > 0 ? 'w-1/2' : 'w-full'" >
+      <p-table [value]="getuserHistoryByMeal(selectedMeal.name)" [ngClass]="foods.length > 0 ? 'w-1/2' : 'w-full'" >
         <ng-template pTemplate="header">
           <tr>
             <th>Alimentos Añadidos</th>
           </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-foodAdded let-index>
+        <ng-template pTemplate="body" let-foodAdded>
           <tr>
             <td class="flex align-items-center justify-content-between gap-2">
               {{ foodAdded.food }} {{ foodAdded.quantity }} {{ foodAdded.unit }}
 
-              <p-button (click)="deleteFoodFromMeal(index)" icon="pi pi-minus"></p-button>
+              <p-button (click)="deleteFoodFromMeal(foodAdded)" icon="pi pi-minus"></p-button>
             </td>
           </tr>
         </ng-template>
