--- a/src/app/calories/components/search-food/search-food.component.html
+++ b/src/app/calories/components/search-food/search-food.component.html
@@ -20,7 +20,7 @@
 
     </div>
     <div class="flex gap-8">
-      <p-table [value]="foods" *ngIf="foods.length > 0">
+      <p-table [value]="foodsSearched" *ngIf="foodsSearched.length > 0">
         <ng-template pTemplate="header">
           <tr>
             <th>Alimentos</th>
@@ -28,10 +28,10 @@
         </ng-template>
         <ng-template pTemplate="body" let-food>
           <tr class="tr-space">
-            <td class=" bg-blue-100 border-round">
+            <td class=" bg-blue-100 border-round flex justify-content-center">
               <form [formGroup]="foodForm" (submit)="addFoodToMeal(selectedMeal.name,food, foodForm)" class="flex align-items-center justify-content-center gap-2">
-                <label>{{food}}</label>
-                <p-inputNumber formControlName="quantity"/>
+                <label>{{food.name}}</label>
+                <p-inputNumber formControlName="quantity" (keyup)="calculate(food.id)"/>
                 <p-selectButton
                   formControlName="units"
                   [options]="selectUnitOptions"
@@ -47,21 +47,33 @@
             <td class="flex flex-nowrap gap-2 justify-content-around pb-4">
               <div class="flex flex-column gap-2 flex-1">
                 <span class="text-center">Proteínas</span>
-                <calories-progress-bar class="w-full" [value]="80" [color]="proteinColor"></calories-progress-bar>
+                <div [style]="{'background-color': proteinColor}" class="border-round flex justify-content-center">
+                  <span class="text-white">{{food.protein}}</span>
+                </div>
               </div>
               <div class="flex flex-column gap-2 flex-1">
                 <span class="text-center">Carbohidratos</span>
-                <calories-progress-bar class="w-full" [value]="70" [color]="carbsColor"></calories-progress-bar>
+                <div [style]="{'background-color': carbsColor}" class="border-round flex justify-content-center">
+                  <span class="text-white">{{food.carbohydrate}}</span>
+                </div>
               </div>
               <div class="flex flex-column gap-2 flex-1" >
                 <span class="text-center">Grasas</span>
-                <calories-progress-bar class="w-full" [value]="60" [color]="fatColor"></calories-progress-bar>
+                <div [style]="{'background-color': fatColor}" class="border-round flex justify-content-center">
+                  <span class="text-white">{{food.fat}}</span>
+                </div>
+              </div>
+              <div class="flex flex-column gap-2 flex-1" >
+                <span class="text-center">Calorias</span>
+                <div [style]="{'background-color': caloriesColor}" class="border-round flex justify-content-center">
+                  <span class="text-white">{{food.calories}}</span>
+                </div>
               </div>
             </td>
           </tr>
         </ng-template>
       </p-table>
-      <p-table [value]="getuserHistoryByMeal(selectedMeal.name)" [ngClass]="foods.length > 0 ? 'w-1/2' : 'w-full'" >
+      <p-table [value]="getuserHistoryByMeal(selectedMeal.name)" [ngClass]="foodsSearched.length > 0 ? 'w-1/2' : 'w-full'" >
         <ng-template pTemplate="header">
           <tr>
             <th>Alimentos Añadidos</th>
