--- a/src/app/calories/components/progress-bar/progress-bar.component.html
+++ b/src/app/calories/components/progress-bar/progress-bar.component.html
@@ -1,6 +1,6 @@
 
 <p-progressBar [value]="value" [color] = color >
   <ng-template pTemplate="content" let-value>
-    <span>{{value}}/100</span>
+    <span>{{totalCalories}}/100</span>
   </ng-template>
 </p-progressBar>
