--- a/src/app/calories/components/search-food/search-food.component.html
+++ b/src/app/calories/components/search-food/search-food.component.html
@@ -8,12 +8,13 @@
           id="search"
           type="text"
           pInputText
-          (keydown.backspace)="deleteSearch()"
           (keydown.enter)="searchFoods(searchTerm.value)"
           placeholder="Escribe el nombre del alimento..."
         />
         <p-button (click)="searchFoods(searchTerm.value)" icon="pi pi-search"></p-button>
+
       </form>
+
       <div class="card" *ngIf="isSearching">
         <p-progressBar mode="indeterminate" [style]="{'height': '6px'}" />
       </div>
@@ -29,16 +30,10 @@
         <ng-template pTemplate="body" let-food>
           <tr class="tr-space">
             <td class=" bg-blue-100 border-round flex justify-content-center">
-              <form [formGroup]="foodForm" (submit)="addFoodToMeal(selectedMeal.name,food, foodForm)" class="flex align-items-center justify-content-center gap-2">
+              <form [formGroup]="foodForm" (submit)="addFoodToMeal(selectedMeal.name, food)" class="flex align-items-center justify-content-center gap-2">
                 <label>{{food.name}}</label>
                 <p-inputNumber formControlName="quantity" (keyup)="calculate(food.id)"/>
-                <p-selectButton
-                  formControlName="units"
-                  [options]="selectUnitOptions"
-                  optionLabel="label"
-                  optionValue="value"
-                  class="mr-1 w-5"
-                />
+                <span>{{food.serving_description}}</span>
                 <p-button type="submit" icon="pi pi-plus"></p-button>
               </form>
             </td>
@@ -73,7 +68,7 @@
           </tr>
         </ng-template>
       </p-table>
-      <p-table [value]="getuserHistoryByMeal(selectedMeal.name)" [ngClass]="foodsSearched.length > 0 ? 'w-1/2' : 'w-full'" >
+      <p-table [value]="getuserHistoryByMeal(selectedMeal.name)" [ngClass]="foodsSearched.length > 0 ? 'w-1/2' : 'w-full'" *ngIf="getuserHistoryByMeal(selectedMeal.name).length > 0" >
         <ng-template pTemplate="header">
           <tr>
             <th>Alimentos Añadidos</th>
@@ -82,7 +77,7 @@
         <ng-template pTemplate="body" let-foodAdded>
           <tr>
             <td class="flex align-items-center justify-content-between gap-2">
-              {{ foodAdded.food }} {{ foodAdded.quantity }} {{ foodAdded.unit }}
+              {{ foodAdded.foodName }} {{ foodAdded.quantity }} {{ foodAdded.units }}
 
               <p-button (click)="deleteFoodFromMeal(foodAdded)" icon="pi pi-minus"></p-button>
             </td>
@@ -90,8 +85,9 @@
         </ng-template>
       </p-table>
     </div>
-
-
-
   </div>
+  <div class="flex justify-content-end mt-3">
+    <p-button (click)="saveMeal()" label="Guardar" *ngIf="isToday()"></p-button>
+  </div>
+
 </p-dialog>
