--- a/src/app/calories/pages/calories-page/calories-page.component.html
+++ b/src/app/calories/pages/calories-page/calories-page.component.html
@@ -9,7 +9,7 @@
 
   <div class="flex align-items-center mb-5">
     <div>
-      <calories-calendar></calories-calendar>
+      <calories-calendar (selectedDateChange)="onDateChange($event)"></calories-calendar>
     </div>
     <div class="flex-1 ">
       <calories-dought class="flex flex-wrap justify-content-around"></calories-dought>
@@ -17,7 +17,7 @@
   </div>
   <div class="flex align-items-center justify-content-center gap-8 mb-5">
     <div class=" flex-1 flex flex-wrap">
-      <calories-food-info></calories-food-info>
+      <calories-food-info [history]="history" [selectedDate]="date"></calories-food-info>
     </div>
     <div class="flex-1">
       <calories-graphic></calories-graphic>
