Todos los graficos de la app obtienen los datos de la base de datos. Se añade el genero en el registro

--- a/src/app/calories/components/progress-bar/progress-bar.component.html
+++ b/src/app/calories/components/progress-bar/progress-bar.component.html
@@ -1,6 +1,6 @@
 
-<p-progressBar [value]="value" [color] = color >
-  <ng-template pTemplate="content" let-value>
-    <span>{{totalCalories}}/100</span>
+<p-progressBar [value]="totalCaloriesHistory*100/totalCaloriesDiary" [color] = color >
+  <ng-template pTemplate="content">
+    <span>{{totalCaloriesHistory}}/{{totalCaloriesDiary}}</span>
   </ng-template>
 </p-progressBar>
