--- a/src/app/calories/pages/calories-page/calories-page.component.html
+++ b/src/app/calories/pages/calories-page/calories-page.component.html
@@ -1,6 +1,6 @@
 <main class="mr-8 ml-8">
 
-  <p>Hola, usuario, segun los datos de tu perfil tienes una tasa metabolica basal de : tasametabolica
+  <p>Hola, usuario, segun los datos de tu perfil tienes una tasa metabolica basal de : {{userTmb}}
   Si quieres bajar de peso de forma rápida, deberás de ingerir X calorias,
   Si quieres bajar de peso de forma progresiva, deberás de ingerir x calorias,
   Si quieres subir de peso de forma rapida, deberás de ingerir x calorias
@@ -22,6 +22,7 @@
     <div class="flex-1">
       <calories-graphic></calories-graphic>
     </div>
+
   </div>
 
 
