--- a/src/app/calories/components/graphic/graphic.component.html
+++ b/src/app/calories/components/graphic/graphic.component.html
@@ -1,7 +1,2 @@
-<p-chart type="line"
-         [data]="data"
-         [options]="options"
-         class="w-auto"
-
-/>
+<p-chart #chart type="line" [data]="data" [options]="options"/>
 
