--- a/src/app/calories/components/search-food/search-food.component.html
+++ b/src/app/calories/components/search-food/search-food.component.html
@@ -76,18 +76,49 @@
         </ng-template>
         <ng-template pTemplate="body" let-foodAdded>
           <tr>
-            <td class="flex align-items-center justify-content-between gap-2">
-              {{ foodAdded.foodName }} {{ foodAdded.quantity }} {{ foodAdded.units }}
+            <td class="flex flex-column align-items-center justify-content-between gap-4">
+              <div class="flex align-items-center justify-content-between w-full">
+                {{ foodAdded.foodName }} {{ foodAdded.quantity }} {{ foodAdded.units }}
 
-              <p-button (click)="deleteFoodFromMeal(foodAdded)" icon="pi pi-minus"></p-button>
+                <p-button (click)="deleteFoodFromMeal(foodAdded)" icon="pi pi-minus"></p-button>
+              </div>
+
+              <div class="flex flex-nowrap gap-2 justify-content-around pb-4">
+                  <div class="flex flex-column gap-2 flex-1">
+                    <span class="text-center">Proteínas</span>
+                    <div [style]="{'background-color': proteinColor}" class="border-round flex justify-content-center">
+                      <span class="text-white">{{foodAdded.proteins}}</span>
+                    </div>
+                  </div>
+                  <div class="flex flex-column gap-2 flex-1">
+                    <span class="text-center">Carbohidratos</span>
+                    <div [style]="{'background-color': carbsColor}" class="border-round flex justify-content-center">
+                      <span class="text-white">{{foodAdded.carbohydrates}}</span>
+                    </div>
+                  </div>
+                  <div class="flex flex-column gap-2 flex-1" >
+                    <span class="text-center">Grasas</span>
+                    <div [style]="{'background-color': fatColor}" class="border-round flex justify-content-center">
+                      <span class="text-white">{{foodAdded.fats}}</span>
+                    </div>
+                  </div>
+                  <div class="flex flex-column gap-2 flex-1" >
+                    <span class="text-center">Calorias</span>
+                    <div [style]="{'background-color': caloriesColor}" class="border-round flex justify-content-center">
+                      <span class="text-white">{{foodAdded.calories}}</span>
+                    </div>
+                  </div>
+              </div>
             </td>
+
           </tr>
         </ng-template>
       </p-table>
     </div>
   </div>
   <div class="flex justify-content-end mt-3">
-    <p-button (click)="saveMeal()" label="Guardar" *ngIf="isToday()"></p-button>
+    <!--<p-button (click)="saveMeal()" label="Guardar" *ngIf="isToday()"></p-button>-->
+    <p-button (click)="saveMeal()" label="Guardar"></p-button>
   </div>
 
 </p-dialog>
