--- a/src/app/calories/components/graphic/graphic.component.html
+++ b/src/app/calories/components/graphic/graphic.component.html
@@ -1,2 +1,5 @@
-<p-chart #chart type="line" [data]="data" [options]="options"/>
+<div class="card" style="background-color:#1f2937">
+  <p-chart #chart type="line" [data]="data" [options]="options" />
+</div>
+
 
