--- a/src/app/shared/top-bar/top-bar.component.css
+++ b/src/app/shared/top-bar/top-bar.component.css
@@ -6,7 +6,7 @@
   width:98%;
   border-radius: 40px;
   border:solid lightgrey 1px;
-  background-color: white;
+/*  background-color: white;*/
   padding: 0 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -27,6 +27,10 @@ p-megamenu{
 
 .labelColor{
   color:black;
+}
+
+.labelColorWhite{
+  color:white;
 }
 
 .p-megamenu-root-list{
