Preferencias de usuario

--- a/src/app/calories/components/graphic/graphic.component.html
+++ b/src/app/calories/components/graphic/graphic.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="background-color:#1f2937">
+<div class="card">
   <p-chart #chart type="line" [data]="data" [options]="options" />
 </div>
 
