--- a/src/app/calories/components/food-info/food-info.component.html
+++ b/src/app/calories/components/food-info/food-info.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-column flex-wrap gap-3 justify-content-start">
   <div class="flex flex-column gap-5 flex-1">
-    <p-button (click)="addMeal()" class="w-full"><i class="pi pi-plus"></i></p-button>
+    <!--<p-button (click)="addMeal()" class="w-full"><i class="pi pi-plus"></i></p-button>-->
     <calories-progress-bar class="w-auto"></calories-progress-bar>
   </div>
   <div class="flex flex-1 flex-wrap gap-4 justify-content-between">
