Terminando la base de la página de calorias

--- a/src/app/calories/components/progress-bar/progress-bar.component.html
+++ b/src/app/calories/components/progress-bar/progress-bar.component.html
@@ -1,6 +1,6 @@
 
 <p-progressBar [value]="totalCaloriesHistory*100/totalCaloriesDiary" [color] = color >
   <ng-template pTemplate="content">
-    <span>{{totalCaloriesHistory}}/{{totalCaloriesDiary}}</span>
+    <span>{{totalCaloriesHistory}}/{{totalCaloriesDiary}} CALORÍAS DIARIAS CONSUMIDAS</span>
   </ng-template>
 </p-progressBar>
