--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <!-- NavBar -->
 <p-toast/>
-<shared-top-bar></shared-top-bar>
-<router-outlet></router-outlet>
-<shared-footer></shared-footer>
+<div class="flex flex-column min-h-screen">
+  <shared-top-bar></shared-top-bar>
+  <router-outlet></router-outlet>
+  <shared-footer></shared-footer>
+</div>
+
 <!-- footer -->
